--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,15 @@
-name: test        #name: ワークフローの名前
-  on: push          #on: いつこのワークフローを走らせるか
-  jobs:             #走らせたい処理（ジョブ）のリスト
-    test:           #testというジョブを作る
-      runs-on: ubuntu-latest   #どの環境で動かすか
-      steps:                   #手続きの記述
-      - uses: actions/checkout@v3  #https://github.com/actions/checkoutのバージョン3を使用
-      - name: All test             #このジョブの名前
+# SPDX-FileCopyrightText: 2024 Kazuki Makino <s23c1131km@s.chibakoudai.jp>
+# SPDX-License-Identifier:BSD-3-Clause
 
+name: test
+on: push
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
+    steps:
+    - uses: actions/checkout@v3
+    - name: All test
+      run: bash -xv ./test.bash
